# fastapi-with-postgresql-and-unit-tests

./: README.md  database.db  database_test.db  main.py  pyproject.toml
api/v100/: router.py
api/v100/schemas/: users.py
api/v100/users/: users.py
db/: database.py
db/repositories/: users.py
db/tables/: users.py
test/users/: users_test.py
