[tool.poetry]
name = "fastapi-with-postgresql-and-unit-tests"
version = "0.1.0"
description = ""
authors = ["Edward Gomez <egoan82@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.7.1"}
psycopg2-binary = "^2.9.9"
sqlmodel = "^0.0.18"
faker = "^25.1.0"
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
